--- a/beta.html
+++ b/beta.html
@@ -160,8 +160,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         </style>
 
                         <div class="item-page-download">
-                         <h2 style="text-align: center !important; margin-left: 0px;">Atomic Wallet BETA 2.2.0</h2>  
-           <h3>Release 2.2.0</h3>
+                         <h2 style="text-align: center !important; margin-left: 0px;">Atomic Wallet BETA 2.3.0</h2>  
+           <h3>Release 2.3.0</h3>
            <p class="download-text only-mobile">Only Desktop Version Available</p> 
     <!-- Subscribe Pop-up-->
 <script>window.jQuery || document.write('<scr' + 'ipt src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.0/jquery.min.js"><\/sc' + 'ript>')</script>
@@ -178,69 +178,69 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
             <div class="download mobile-hide">
               <div class="download-item download-item-windows hvr-grow" data-download="windows">
-                <a href="https://atomicwallet.io/download/atomicwallet.exe" onclick="window.kol_modal_220933.show()"><img src="css/images/logo-windows.svg" alt="" class="download-item-img-color"></a>
+                <a href="https://atomicwallet.io/download/atomicwallet-2.3.0.exe" onclick="window.kol_modal_220933.show()"><img src="css/images/logo-windows.svg" alt="" class="download-item-img-color"></a>
                 <img src="css/images/logo-windows-color.svg" alt="" class="download-item-img">
                 <span class="download-name">
-                  <a href="https://atomicwallet.io/download/atomicwallet-2.2.0.exe" class="button download-button" onclick="window.kol_modal_220933.show()" ga('send',="" {="" hittype:="" 'event' ,="" eventcategory:="" 'download' ,="" eventaction:=""
+                  <a href="https://atomicwallet.io/download/atomicwallet-2.3.0.exe" class="button download-button" onclick="window.kol_modal_220933.show()" ga('send',="" {="" hittype:="" 'event' ,="" eventcategory:="" 'download' ,="" eventaction:=""
                     eventlabel:="" 'windows'="" });="">Windows</a>
                 </span>
                 <span class="download-button-label">
-                  <a href="https://atomicwallet.io/download/atomicwallet-2.2.0.exe" class="button download-button" onclick="window.kol_modal_220933.show()" ga('send',="" {="" hittype:="" 'event' ,="" eventcategory:="" 'download' ,="" eventaction:=""
+                  <a href="https://atomicwallet.io/download/atomicwallet-2.3.0.exe" class="button download-button" onclick="window.kol_modal_220933.show()" ga('send',="" {="" hittype:="" 'event' ,="" eventcategory:="" 'download' ,="" eventaction:=""
                     eventlabel:="" 'windows'="" });="">Download</a>
                 </span>
               </div>
               <div class="download-item download-item-apple hvr-grow" data-download="apple">
-                <a href="https://atomicwallet.io/download/atomicwallet.dmg" onclick="window.kol_modal_220933.show()"><img src="css/images/logo-apple.svg" alt="" class="download-item-img-color"></a>
+                <a href="https://atomicwallet.io/download/atomicwallet-2.3.0.dmg" onclick="window.kol_modal_220933.show()"><img src="css/images/logo-apple.svg" alt="" class="download-item-img-color"></a>
                 <img src="css/images/logo-apple-color.svg" alt="" class="download-item-img">
                 <span class="download-name">
-                  <a href="https://atomicwallet.io/download/atomicwallet-2.2.0.dmg" class="button download-button" onclick="window.kol_modal_220933.show()" ga('send',="" {="" hittype:="" 'event' ,="" eventcategory:="" 'download' ,="" eventaction:=""
+                  <a href="https://atomicwallet.io/download/atomicwallet-2.3.0.dmg" class="button download-button" onclick="window.kol_modal_220933.show()" ga('send',="" {="" hittype:="" 'event' ,="" eventcategory:="" 'download' ,="" eventaction:=""
                     eventlabel:="" 'macos'="" });="">macOS</a>
                 </span>
                 <span class="download-button-label">
-                  <a href="https://atomicwallet.io/download/atomicwallet-2.2.0.dmg" class="button download-button" onclick="window.kol_modal_220933.show()" ga('send',="" {="" hittype:="" 'event' ,="" eventcategory:="" 'download' ,="" eventaction:=""
+                  <a href="https://atomicwallet.io/download/atomicwallet-2.3.0.dmg" class="button download-button" onclick="window.kol_modal_220933.show()" ga('send',="" {="" hittype:="" 'event' ,="" eventcategory:="" 'download' ,="" eventaction:=""
                     eventlabel:="" 'macos'="" });="">Download</a>
                 </span>
               </div>
               <div class="download-item download-item-ubuntu hvr-grow" data-download="ubuntu">
-                <a href="https://atomicwallet.io/download/atomicwallet.AppImage" onclick="window.kol_modal_220933.show()"><img src="css/images/logo-ubuntu.svg" alt="" class="download-item-img-color"></a>
+                <a href="https://atomicwallet.io/download/atomicwallet-2.3.0.AppImage" onclick="window.kol_modal_220933.show()"><img src="css/images/logo-ubuntu.svg" alt="" class="download-item-img-color"></a>
                 <img src="css/images/logo-ubuntu-color.svg" alt="" class="download-item-img">
                 <span class="download-name">
-                  <a href="https://atomicwallet.io/download/atomicwallet-2.2.0.AppImage" class="button download-button" onclick="window.kol_modal_220933.show()" ga('send',="" {="" hittype:="" 'event' ,="" eventcategory:="" 'download' ,="" eventaction:=""
+                  <a href="https://atomicwallet.io/download/atomicwallet-2.3.0.AppImage" class="button download-button" onclick="window.kol_modal_220933.show()" ga('send',="" {="" hittype:="" 'event' ,="" eventcategory:="" 'download' ,="" eventaction:=""
                     eventlabel:="" 'ubuntu'="" });="">Ubuntu</a>
                 </span>
                 <span class="download-button-label">
-                  <a href="https://atomicwallet.io/download/atomicwallet-2.2.0.AppImage" class="button download-button" onclick="window.kol_modal_220933.show()" ga('send',="" {="" hittype:="" 'event' ,="" eventcategory:="" 'download' ,="" eventaction:=""
+                  <a href="https://atomicwallet.io/download/atomicwallet-2.3.0.AppImage" class="button download-button" onclick="window.kol_modal_220933.show()" ga('send',="" {="" hittype:="" 'event' ,="" eventcategory:="" 'download' ,="" eventaction:=""
                     eventlabel:="" 'ubuntu'="" });="">Download</a>
                 </span>
               </div>
               <div class="download-item download-item-debian hvr-grow" data-download="debian">
-                <a href="https://atomicwallet.io/download/atomicwallet.deb" onclick="window.kol_modal_220933.show()"><img src="css/images/logo-debian.svg" alt="" class="download-item-img-color"></a>
+                <a href="https://atomicwallet.io/download/atomicwallet-2.3.0.deb" onclick="window.kol_modal_220933.show()"><img src="css/images/logo-debian.svg" alt="" class="download-item-img-color"></a>
                 <img src="css/images/logo-debian-color.svg" alt="" class="download-item-img">
                 <span class="download-name">
-                  <a href="https://atomicwallet.io/download/atomicwallet-2.2.0.deb" class="button download-button" onclick="window.kol_modal_220933.show()" ga('send',="" {="" hittype:="" 'event' ,="" eventcategory:="" 'download' ,="" eventaction:=""
+                  <a href="https://atomicwallet.io/download/atomicwallet-2.3.0.deb" class="button download-button" onclick="window.kol_modal_220933.show()" ga('send',="" {="" hittype:="" 'event' ,="" eventcategory:="" 'download' ,="" eventaction:=""
                     eventlabel:="" 'debian'="" });="">Debian</a>
                 </span>
                 <span class="download-button-label">
-                  <a href="https://atomicwallet.io/download/atomicwallet-2.2.0.deb" class="button download-button" onclick="window.kol_modal_220933.show()" ga('send',="" {="" hittype:="" 'event' ,="" eventcategory:="" 'download' ,="" eventaction:=""
+                  <a href="https://atomicwallet.io/download/atomicwallet-2.3.0.deb" class="button download-button" onclick="window.kol_modal_220933.show()" ga('send',="" {="" hittype:="" 'event' ,="" eventcategory:="" 'download' ,="" eventaction:=""
                     eventlabel:="" 'debian'="" });="">Download</a>
                 </span>
               </div>
               <div class="download-item download-item-fedora hvr-grow" data-download="fedora">
-                <a href="https://atomicwallet.io/download/atomicwallet.rpm" onclick="window.kol_modal_220933.show()"><img src="css/images/logo-fedora.svg" alt="" class="download-item-img-color"></a>
+                <a href="https://atomicwallet.io/download/atomicwallet-2.3.0.rpm" onclick="window.kol_modal_220933.show()"><img src="css/images/logo-fedora.svg" alt="" class="download-item-img-color"></a>
                 <img src="css/images/logo-fedora-color.svg" alt="" class="download-item-img">
                 <span class="download-name">
-                  <a href="https://atomicwallet.io/download/atomicwallet-2.2.0.rpm" class="button download-button" onclick="window.kol_modal_220933.show()" ga('send',="" {="" hittype:="" 'event' ,="" eventcategory:="" 'download' ,="" eventaction:=""
+                  <a href="https://atomicwallet.io/download/atomicwallet-2.3.0.rpm" class="button download-button" onclick="window.kol_modal_220933.show()" ga('send',="" {="" hittype:="" 'event' ,="" eventcategory:="" 'download' ,="" eventaction:=""
                     eventlabel:="" 'fedora'="" });="">Fedora</a>
                 </span>
                 <span class="download-button-label">
-                  <a href="https://atomicwallet.io/download/atomicwallet-2.2.0.rpm" class="button download-button" onclick="window.kol_modal_220933.show()" ga('send',="" {="" hittype:="" 'event' ,="" eventcategory:="" 'download' ,="" eventaction:=""
+                  <a href="https://atomicwallet.io/download/atomicwallet-2.3.0.rpm" class="button download-button" onclick="window.kol_modal_220933.show()" ga('send',="" {="" hittype:="" 'event' ,="" eventcategory:="" 'download' ,="" eventaction:=""
                     eventlabel:="" 'fedora'="" });="">Download</a>
                 </span>
               </div>
             </div>
 
             <div class="download-button-bottom mobile-hide">
-              <a href="https://atomicwallet.io/download/hash_sum-2.2.0.pdf" target="_blank" class="button hash-torrent hvr-float">Check Hash Sum</a>&nbsp;&nbsp;&nbsp;&nbsp;
+              <a href="https://atomicwallet.io/download/hash_sum-2.3.0.pdf" target="_blank" class="button hash-torrent hvr-float">Check Hash Sum</a>&nbsp;&nbsp;&nbsp;&nbsp;
 
               <!--<a href="magnet:?xt=urn:btih:8F40C43C1602510238281D707D6C29B674B61C95&dn=Atomic" class="button hash-torrent" target="_blank">Torrent Download</a>-->
             </div>
@@ -252,9 +252,37 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <img src="css/images/atomic-beta.png" alt="Atomic Wallet Beta" style="width: 79%; display: inline;">
                 </div>
               </div>
+
+
+                           <div class="releases">
+            <h4>Beta 2.3.0</h4>
+            <h5>05/07/2019</h5>
+            <div class="footer-new-left">
+              <div class="footer-new-left">
+                <h4>New Features:</h4>
+              </div>
+            </div>
+            <ol>
+                <li>Added widget for sending crypto.</li>
+                <li>Now you can send crypto choosing fiat value.</li>
+                <li>Adjust the fee for sending BTC, LTC manually.</li>
+                <li>Added feature to manage any ERC20 custom token by contract address.</li>
+                <li>Support page updated.</li>
+              </ol>
+            <div class="footer-new-left">
+              <div class="footer-new-left">
+                <h4>Bug fixes:</h4>
+              </div>
+            </div>
+            <ol>
+                <li>VTHO sending fixed.</li>
+                <li>VET/VTHO history bug fixed.</li>
+                <li>BTC balance fixed (if Bench32 address occurred in tx history).</li>
+                <li>ATOM private key format updated.</li>
+              </ol>
+           
+          </div>   
             
-
-
 
              <div class="releases">
             <h4>Beta 2.2.0</h4>
