Pump and Dump Article Added

--- a/blog.html
+++ b/blog.html
@@ -127,6 +127,18 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="item-page-article blog-bg-color-none">
 
 
+            <div class="blog-div hvr-float">
+            <a href="https://atomicwallet.io/what-is-pump-and-dump">
+            <div class="small-image-blog">
+              <img src="css/images/articles/what-is-pump-and-dump-blog.png" alt="" class="blog-image-template">
+            </div>
+            <div class="blog-div-text">
+              <h4>What is pump and dump scheme?</h4>
+            <p>Pump and Dump is a scheme that leads to very fast and fundamentally unreasonable growth of a cryptocurrency rate, then fall. On traditional exchanges, this practice is illegal and is strictly governed... </p></div>
+            </a>
+          </div>
+
+
                     <div class="blog-div hvr-float">
             <a href="https://atomicwallet.io/public-wifi-and-crypto">
             <div class="small-image-blog">
