Pumd and Dump, PoS, Blockchain Governance Articles added to website

--- a/blog.html
+++ b/blog.html
@@ -126,6 +126,17 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <p style="text-align: center;">Latest posts, articles about crypto assets, blockchain tutorials and more.</p>
         <div class="item-page-article blog-bg-color-none">
 
+            <div class="blog-div hvr-float">
+            <a href="https://atomicwallet.io/what-is-proof-of-stake">
+            <div class="small-image-blog">
+              <img src="css/images/articles/what-is-proof-of-stake-blog.png" alt="" class="blog-image-template">
+            </div>
+            <div class="blog-div-text">
+              <h4>What is Proof of Stake?</h4>
+            <p>Proof-of-Work is the second most popular consensus algorithm, which is nowadays being used by a number of successful crypto projects, with many more planning to change their system to PoS soon.</p></div>
+            </a>
+          </div>
+
 
             <div class="blog-div hvr-float">
             <a href="https://atomicwallet.io/what-is-pump-and-dump">
