--- a/downloads.html
+++ b/downloads.html
@@ -141,8 +141,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           <div class="item-page-download">
 
             <h3>Atomic Wallet</h3>
-            <h4 class="mobile-hide">Latest release 2.2.0</h4>
-           <h3 class="download-text f-light mobile-hide" style="font-size: 24px;">To upgrade to 2.2.0 version restore the wallet with 12-word seed backup.</h3>
+            <h4 class="mobile-hide">Latest release 2.3.1</h4>
+           <h3 class="download-text f-light mobile-hide" style="font-size: 24px;">To upgrade to 2.3.1 version restore the wallet with 12-word seed backup.</h3>
     <!-- Subscribe Pop-up-->
 <script>window.jQuery || document.write('<scr' + 'ipt src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.0/jquery.min.js"><\/sc' + 'ript>')</script>
 <script>window.$kol_jquery = window.jQuery</script>
@@ -249,6 +249,36 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
               we noted your suggestions carefully in order to take another step towards perfection.</p></div>
 
 
+               <div class="releases">
+            <h4>Desktop Release 2.3.1</h4>
+            <h5>10/07/2019</h5>
+            <div class="footer-new-left">
+              <div class="footer-new-left">
+                <h4>New Features:</h4>
+              </div>
+            </div>
+            <ol>
+                <li>Added widget for sending crypto.</li>
+                <li>Now you can send crypto choosing fiat value.</li>
+                <li>Adjust the fee for sending BTC, LTC manually.</li>
+                <li>Added feature to manage any ERC20 custom token by contract address.</li>
+                <li>Support page updated.</li>
+              </ol>
+            <div class="footer-new-left">
+              <div class="footer-new-left">
+                <h4>Bug fixes:</h4>
+              </div>
+            </div>
+            <ol>
+                <li>VTHO, DGB sending fixed.</li>
+                <li>Fixed bug with missing ETH balances.</li>
+                <li>VET/VTHO, ETH history bug fixed.</li>
+                <li>BTC balance fixed (if Bench32 address occurred in tx history).</li>
+                <li>ATOM private key format updated.</li>
+              </ol>
+           </div>   
+
+
                 <div class="releases">
             
             <h4>Desktop Release 2.2.0</h4>
@@ -315,7 +345,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           </ol>
 
           <div class="footer-new-left">
-          <h4>How to upgade to 2.2.0</h4>
+          <h4>How to upgade to 2.3.1</h4>
           </div>
           <ol>
           <li>Open your existing v1.XX wallet, Settings > Private keys > Atomic mnemonic seed. Backup your 12-word in a secure place.</li>
