--- a/what-is-pump-and-dump.html
+++ b/what-is-pump-and-dump.html
@@ -275,7 +275,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 </div>
               </div>
               <p>It's impossible to define the exact number of such groups, but researchers have found at least 63 active communities that don't hide their goals. These are Orion Pump, MEGA Pump, A + Signals and others. Most of them coordinate all activities in Telegram and Discord, where the total number of participants at the end of July has reached 236,000 people. The creators of Big Pump Signal, as well as other active groups, retain complete anonymity. Many of them charge a monthly fee for participating in a group - from $ 50 to $ 250. It isn't known what amounts a regular participant earns in such communities, but administrators definitely have an advantage: they choose a coin, buy it at the lowest price and sell it at the peak they set.</p>
-              <h3>Are pumps and dumps illegal / why you should not particpate in pumps</h3>
+              <h3>Are pumps and dumps illegal / why you should not participate in pumps</h3>
               <div class="item-page-image-template">
                 <div class="item-page-blog-image">
                     <img src="css/images/articles/are-pumps-and-dumps-illegal.gif" alt="Are Pumps and Dumps Illegal?">
