--- a/downloads.html
+++ b/downloads.html
@@ -273,7 +273,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <li>VTHO, DGB sending fixed.</li>
                 <li>Fixed bug with missing ETH token balances.</li>
                 <li>VET/VTHO, ETH tokens history bug fixed.</li>
-                <li>BTC balance fixed (if Bench32 address occurred in tx history).</li>
+                <li>BTC history fixed (if Bench32 address occurred in tx history).</li>
                 <li>ATOM private key format updated.</li>
               </ol>
            </div>   
