--- a/downloads.html
+++ b/downloads.html
@@ -258,7 +258,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
               </div>
             </div>
             <ol>
-                <li>Added widget for sending crypto.</li>
+                <li>Added wizard for sending crypto.</li>
                 <li>Now you can send crypto choosing fiat value.</li>
                 <li>Adjust the fee for sending BTC, LTC manually.</li>
                 <li>Added feature to manage any ERC20 custom token by contract address.</li>
