--- a/public-wifi-and-crypto.html
+++ b/public-wifi-and-crypto.html
@@ -145,11 +145,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <img src="css/images/articles/how-to-secury-fund-public-wifi.png" alt="How to Secure Funsd while using Public WiFi">
                 </div>
               </div>
-              <p>If before the Internet user had to fear only fraudsters and viruses, then today we have to “hide” from everyone. All around want to know as much as possible.</p>
-              <p>Let’s analyze the type of attacks which exists today and understand how to secure your funds.</p>
+              <p>If before the Internet user had to fear fraudsters and viruses only, today, we need to hide from everyone. Everybody around wants to know as much as possible.</p>
+              <p>Let’s analyze the types of attacks which exists today and understand how to secure your funds.</p>
               <h3>Cryptocurrency Wallet – As a New Target </h3>
               <p>In 2017, Bleeping Computer discovered suspicious activity, revealing the threat of hacking of 2.3 million bitcoin wallets. The hackers used malware to replace the address of the wallet copied to the clipboard with the wallet address of one of the intruders.</p>
-              <p>Hackernoon experts also analyzed data on hacker attacks, conditionally dividing them into three broad categories:</p>
+              <p>Hackernoon experts also analyzed the data on hacker attacks, conditionally dividing them into three broad categories:</p>
               <ul>
                 <li>Attacks on blockchains, cryptocurrency exchanges, and ICO.</li>
                 <li>Distribution of hidden mining software.</li>
@@ -164,9 +164,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 </div>
               </div>
               <p>Back in October 2017, a fatal vulnerability was discovered in the Wifi Protected Access protocol used by routers. After performing an elementary attack with reinstalling the key (KRACK), the user's device is re-connected to the same network, but already under the control of hackers.</p>
-              <p>All information downloaded or sent via this network is available to attackers - including the <b>private keys of crypto-wallets.</b> </p>
-              <ul>In addition to this threat, there are other types of attacks due to the use of public Wifi.
-                <li>The malware installed on your smartphone/laptop. Attackers infect public networks, and then offer victims to install, at first glance, the most common update from Adobe Flash, Google Toolbar or other popular software. In the process of downloading to the user's device, a third-party application is installed that searches for private keys from your cryptocurrency wallet.</li>
+              <p>All information downloaded or sent via this network is available to attackers - including the <b>private keys of crypto wallets.</b> </p>
+              <ul>In addition to this threat, there are other types of attacks caused by the use of public Wifi.
+                <li>The malware installed on your smartphone/laptop. Attackers infect public networks, and then offer victims to install, at first glance, the most common update from Adobe Flash, Google Toolbar or other popular software. In the process of downloading to the user's device, a malware application is installed. This application will search for the private keys of your cryptocurrency wallet.</li>
                 <li>Hackers create a clone of a public network to steal data. The attackers create a new network, which is similar to the original.</li>
                 <li>A hacker can interfere with the current session of the public network. By simple frauds, almost any attacker can hook into your session via free Wifi by hacking the router and duplicating traffic through the new port.</li>
                 <li>Phishing attacks. Another type of Internet fraud, the purpose of which is to gain access to confidential user data. The essence is simple: the attacker creates a clone of a known user of the site.</li>
@@ -177,7 +177,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <img src="css/images/articles/protection-recommendations.png" alt="Protection Recommendations">
                 </div>
               </div>
-              <p>To keep your coins safe and sound, follow easy steps and you will always control your money.</p>
+              <p>To keep your coins safe and sound, follow the easy steps and you will always control your money.</p>
               <ul>
                 <li>Avoid any financial activity when using public networks, including cryptocurrency transactions.</li>
                 <li>Use mobile internet in public places</li>
@@ -194,11 +194,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 </div>
               </div>
               <h3>Atomic Wallet</h3>
-              <p>However, Wifi is not the only thing you need to know about the security of coins. Special attention should also be kept in choosing a wallet.</p>
-              <p>It is always secure when your private keys stored on a local device and encrypted. In this case only you controls them.</p>
+              <p>However, Wifi is not the only thing you need to know about the security of THE coins. You should also pay special attention to choosing a wallet properly.</p>
+              <p>It is more secure when your private keys ARE stored on a local device in an encrypted manner. In this case, only you control them.</p>
               <ul>
                 <li>The user creates the private password required for carrying out transactions.</li>
-                <li>The backup phrase, consisting of 12 words generated, provides an additional opportunity to restore access to the wallet in any case at any time.</li>
+                <li>The backup phrase, which consists of randomly generated 12 words, provides an additional opportunity to restore access to the wallet in any case and at any time.</li>
               </ul>
               <div class="item-page-image-template">
                 <div class="item-page-blog-image">
