--- a/blog.html
+++ b/blog.html
@@ -178,7 +178,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
               <img src="css/images/articles/why-blockchain-governance-is-needed-blog.png" alt="" class="blog-image-template">
             </div>
             <div class="blog-div-text">
-              <h4>Why do we need blockchain goverannce?</h4>
+              <h4>Why do we need blockchain governance?</h4>
             <p>Do you know who governs blockchain? There are many stategises to control the network, let's describe some of them...</p></div>
             </a>
           </div>
