--- a/dogecoin-price.html
+++ b/dogecoin-price.html
@@ -119,61 +119,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- TradingView Widget BEGIN -->
 
 
-<div class="tradingview-widget-container">
-  <div class="tradingview-widget-container__widget"></div>
-  <div class="tradingview-widget-copyright"><a href="https://www.tradingview.com" rel="noopener" target="_blank"></div>
-  <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-ticker-tape.js" async>
-  {
-  "symbols": [
-    {
-      "title": "BTC/USD",
-      "proName": "BITFINEX:BTCUSD"
-    },
-    {
-      "title": "ETH/USD",
-      "proName": "BITFINEX:ETHUSD"
-    },
-    {
-      "description": "XRP/USD",
-      "proName": "KRAKEN:XRPUSD"
-    },
-    {
-      "description": "XLM/USD",
-      "proName": "BITFINEX:XLMUSD"
-    },
-    {
-      "description": "LTC/USD",
-      "proName": "COINBASE:LTCUSD"
-    },
-    {
-      "description": "DOGE/USD",
-      "proName": "BITTREX:DOGEUSD"
-    },
-    {
-      "description": "BCH/USD",
-      "proName": "COINBASE:BCHUSD"
-    },
-    {
-      "description": "DASH/USD",
-      "proName": "KRAKEN:DASHUSD"
-    },
-    {
-      "description": "EOS/USD",
-      "proName": "KRAKEN:EOSUSD"
-    },
-    {
-      "description": "DGB/USD",
-      "proName": "BITFINEX:DGBUSD"
-    }
-  ],
-  "theme": "light",
-  "isTransparent": true,
-  "displayMode": "adaptive",
-  "locale": "en"
-}
-  </script>
 
-</div>
 
 <!-- TradingView Widget END -->
 <div class="item-page-container">
@@ -200,7 +146,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       Buy Dogecoin</a>
     </div>
         	    <div class="buy-coin-button">
-    <a href="https://atomicwallet.io/downloads">
+    <a href="#download">
       Get Wallet</a>
     </div>
         	</div>
@@ -211,6 +157,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <h3 class="center mobile-hide">DOGE to USD Price</h3>
             <div class="widget-price mobile-hide">
            <!-- TradingView Widget BEGIN -->
+           <div class="tradingview-widget-container">
 <div class="tradingview-widget-container">
   <div id="tradingview_ba810"></div>
   <div class="tradingview-widget-copyright"><a href="https://www.tradingview.com/symbols/BITTREX-DOGEUSD/" rel="noopener" target="_blank"><span class="blue-text">DOGEUSD Chart</span></a> by TradingView</div>
@@ -235,6 +182,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   </script>
 </div>
 <!-- TradingView Widget END -->
+</div>
 </div>
 <style>
 	#tradingview_a6953 {
