--- a/tron-price-prediction.html
+++ b/tron-price-prediction.html
@@ -128,7 +128,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       Buy Tron</a>
     </div>
               <div class="buy-coin-button">
-    <a href="https://atomicwallet.io/downloads">
+    <a href="#download">
       Get Wallet</a>
               </div>
           </div>
