--- a/neo-price-prediction.html
+++ b/neo-price-prediction.html
@@ -122,7 +122,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       Buy NEO</a>
     </div>
               <div class="buy-coin-button">
-    <a href="https://atomicwallet.io/downloads">
+    <a href="#download">
       Get Wallet</a>
               </div>
           </div>
