--- a/stellar-price.html
+++ b/stellar-price.html
@@ -119,61 +119,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- TradingView Widget BEGIN -->
 
 
-<div class="tradingview-widget-container">
-  <div class="tradingview-widget-container__widget"></div>
-  <div class="tradingview-widget-copyright"><a href="https://www.tradingview.com" rel="noopener" target="_blank"></div>
-  <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-ticker-tape.js" async>
-  {
-  "symbols": [
-    {
-      "title": "BTC/USD",
-      "proName": "BITFINEX:BTCUSD"
-    },
-    {
-      "title": "ETH/USD",
-      "proName": "BITFINEX:ETHUSD"
-    },
-    {
-      "description": "XRP/USD",
-      "proName": "KRAKEN:XRPUSD"
-    },
-    {
-      "description": "XLM/USD",
-      "proName": "BITFINEX:XLMUSD"
-    },
-    {
-      "description": "LTC/USD",
-      "proName": "COINBASE:LTCUSD"
-    },
-    {
-      "description": "DOGE/USD",
-      "proName": "BITTREX:DOGEUSD"
-    },
-    {
-      "description": "BCH/USD",
-      "proName": "COINBASE:BCHUSD"
-    },
-    {
-      "description": "DASH/USD",
-      "proName": "KRAKEN:DASHUSD"
-    },
-    {
-      "description": "EOS/USD",
-      "proName": "KRAKEN:EOSUSD"
-    },
-    {
-      "description": "DGB/USD",
-      "proName": "BITFINEX:DGBUSD"
-    }
-  ],
-  "theme": "light",
-  "isTransparent": true,
-  "displayMode": "adaptive",
-  "locale": "en"
-}
-  </script>
 
-</div>
 
 <!-- TradingView Widget END -->
 <div class="item-page-container">
@@ -200,7 +146,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       Buy Stellar</a>
     </div>
         	    <div class="buy-coin-button">
-    <a href="https://atomicwallet.io/downloads">
+    <a href="#download">
       Get Wallet</a>
     </div>
         	</div>
@@ -239,34 +185,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 		width: 320px;
 	}
 </style>
-<h2 class="center mobile-hide">XLM to EUR Price</h2>
-            <div class="widget-price mobile-hide">
-                <!-- TradingView Widget BEGIN -->
-<!-- TradingView Widget BEGIN -->
-<div class="tradingview-widget-container">
-  <div id="tradingview_66891"></div>
-  <div class="tradingview-widget-copyright"><a href="https://www.tradingview.com/symbols/COINBASE-XLMEUR/" rel="noopener" target="_blank"><span class="blue-text">LTCEUR chart</span></a> by TradingView</div>
-  <script type="text/javascript" src="https://s3.tradingview.com/tv.js"></script>
-  <script type="text/javascript">
-  new TradingView.widget(
-  {
-  "symbol": "COINBASE:XLMEUR",
-  "interval": "D",
-  "timezone": "Etc/UTC",
-  "theme": "Light",
-  "style": "1",
-  "locale": "en",
-  "toolbar_bg": "#f1f3f6",
-  "enable_publishing": false,
-  "hide_side_toolbar": false,
-  "allow_symbol_change": true,
-  "container_id": "tradingview_66891"
-}
-  );
-  </script>
-</div>
-<!-- TradingView Widget END -->
-</div>
+
 
 <section>
             <h2 class="center">Stellar Price today: XLM Value, Supply and Market Cap</h2>
