--- a/zcash-price-prediction.html
+++ b/zcash-price-prediction.html
@@ -126,7 +126,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       Buy ZCash</a>
     </div>
               <div class="buy-coin-button">
-    <a href="https://atomicwallet.io/downloads">
+    <a href="#download">
       Get Wallet</a>
               </div>
           </div>
