--- a/usdt-tron-airdrop.html
+++ b/usdt-tron-airdrop.html
@@ -139,7 +139,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <div class="mobile-hide">
                   <img src="css/images/crypto-icon/USDT.svg" class="item-page-image hvr-float " style="position: absolute; top: -75px;
     left: 179px;"></div>
-                    <h1 class="main-title coin-page-title mobile-hide">Atomic USDT Wallet</h1>
+                    <h1 class="main-title coin-page-title mobile-hide">USDT TRON Airdrop</h1>
                     <h2 class="download-text only-mobile  f-light"> Manage your TRC20, Tron, Bitcoin, Ethereum, XRP, Litecoin and over 300 tokens in a single interface.<br><br></h2>
     <div class="mobile-download-button only-mobile">
             <div class="download-item-app hvr-grow" data-download="android">
