--- a/downloads.html
+++ b/downloads.html
@@ -6,7 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta charset="UTF-8">
     <title>Downloads</title>
-    <meta name="description" content="Light multi-assets wallet with built-in atomic swap exchange">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@atomicwallet">
+    <meta name="twitter:creator" content="@atomicwallet">
+    <meta name="twitter:title" content="Download Atomic Wallet | Universal Cryptocurrency Wallet">
+    <meta name="twitter:description" content="Manage your Bitcoin, Ethereum, XRP, Litecoin, Stellar and over 300 tokens in Atomic secure wallet interface. Exchange and buy crypto for USD with credit card.">
+    <meta name="twitter:image" content="https://atomicwallet.io/css/images/main-page-twitter.png">
+    <meta name="description" content="Download Atomic Wallet and manage Bitcoin, Ethereum, XRP, Litecoin, Stellar and over 300 tokens in Atomic secure wallet interface. Exchange and buy crypto for USD with credit card.">
     <link rel="stylesheet" href="css/list.css">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/media.css">
