Trustpilot fix + link added to USDT

--- a/usdt-tron-airdrop.html
+++ b/usdt-tron-airdrop.html
@@ -227,6 +227,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <img src="css/images/articles/trc20-usdt-dates.png" alt="Proof of work in details.">
                 </div>
               </div>
+              <p>If you want to buy TRC20 based USDT, please use the <a href="https://tron.network/usdt?lng=en" target="_blank">following services</a>. </p>
 
         </div>
       </div>
