--- a/bitcoin-sv-wallet.html
+++ b/bitcoin-sv-wallet.html
@@ -119,14 +119,6 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       </header>
   </div>
 </div>
-
-
-
-      <!--  <div class="item-page-article">
-            <img src="css/images/bg-item-page-1.svg" alt="" class="item-page-bg item-page-bg-1">
-            <img src="css/images/bg-item-page-2.svg" alt="" class="item-page-bg item-page-bg-2">
-            <img src="css/images/bg-item-page-3.svg" alt="" class="item-page-bg item-page-bg-3">-->
-
             <main class="main">
               <div class="mobile-hide" style="margin-top: 60px;">
               </div>
@@ -195,7 +187,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <div class="swiper-slide">
                     <div class="comments-item comments-item-reviews">
                         <div class="team-author hvr-grow">
-                            <a href="https://twitter.com/cz_binance/status/1119047237076541440" rel="nofollow" target="_blank"> <img src="https://pbs.twimg.com/profile_images/1118864185155149824/rC5M1VzB_bigger.png" width="65px;" class="team-author-avatar" alt></a>
+                            <a href="https://twitter.com/cz_binance/status/1119047237076541440" rel="nofollow" target="_blank"> <img src="https://pbs.twimg.com/profile_images/1148212647319334912/4Tp-7Uac_400x400.png" width="65px;" class="team-author-avatar" alt></a>
                             <div class="team-author-name f-medium">CZ Binance</div>
                         </div>
                         <div><img src="css/images/trustpilot.png" style="margin-bottom: 15px;" alt="">
@@ -209,7 +201,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <div class="comments-item comments-item-reviews">
                         <div class="team-author hvr-grow">
                           <a href="https://twitter.com/CharlieShrem/status/1009538446678020104?s=09" rel="nofollow" target="_blank">
-                           <img src="https://pbs.twimg.com/profile_images/865954659084775424/2SRmI8-d_bigger.jpg" class="team-author-avatar" alt>
+                           <img src="https://pbs.twimg.com/profile_images/865954659084775424/2SRmI8-d_bigger.jpg" width="65px" class="team-author-avatar" alt>
                             <div class="team-author-name f-medium">Charlie Shrem</div></a>
                         </div>
                         <div><img src="css/images/trustpilot.png" style="margin-bottom: 15px;" alt="">
@@ -555,7 +547,7 @@ $(window).trigger('resize')
 </div>
 <div style="margin-top: 550px;" class="only-mobile">
 </div>
-         <!--  <!--   <h3 class="features-title-app f-bold">Mobile Atomic Wallet</h3>
+         <!--   <h3 class="features-title-app f-bold">Mobile Atomic Wallet</h3>
                    <div class="container relative"><img class="mobile_interface" src="css/images/mobile_interface1.png">
                     </div>
                     <br><h3 class="download-text-app f-light"> Android and iOS versions will be available soon.<br></h3>
@@ -584,7 +576,7 @@ $(window).trigger('resize')
             <script src='https://kickoffpages-kickofflabs.netdna-ssl.com/w/113350/229470.js'></script>
             </div>
             </section> -->
- -->
+ 
             <section class="comments team" id="team" data-slider>
                 <div class="container relative">
                     <h2 class="features-title f-bold">Team</h2>
@@ -699,28 +691,25 @@ $(window).trigger('resize')
                 <img src="css/images/crypto-icon/BCHSV.svg" class="item-page-image hvr-float">
             </div>
 
-            <h2>BCH(ABC) and BCH(SV)</h2>
-            <p>On 15 November 2018, the Bitcoin Cach (BCH) had a hard fork. Now there is BCH (ABC) (Bitcoin Cash ABC) and BSV (Bitcoin Satoshi Vision) leaded by Craig Wright’s team who want to increase the block size from 32 to 128 Mb to scalable.</p>
-            <p>After the BCH hard fork, both of them started generating blocks on their own blockchains to increase their hashrate and get more blocks to prove the reliability of their network. BCH(ABC) was supported by Jihan Wu, who claimed himself as Satoshi Nakamoto. Wu is co-founder of Bitmain, one of the leading mining pools. The Bitcoin Cash ABC has collected more PoW (Proof-of-Work) and won the battle this way.</p>
-            <h3>What is the true BCH?</h3>
-            <p>After that, all of the top crypto-exchanges like Coinbase, Bittrex, Kraken etc recognized the BCH(ABC) as the main BCH blockchain. They assigned BCH(ABC) the original BCH ticker and resumed trading again after it had been stopped during the hash war. Then cold wallets were recognized BCH(ABC) as BCH as well. These are two different and non-compatible blockchains with two different teams that follow their own rules.</p>
-            <p>Today BCH holders have two balances, one in BCH(ABC) and the second in BSV. Binance, one of the largest crypto exchanges, initially decided to support both coins leaving their original tickers. You can also manage your Bitcoin Cash ABC and Bitcoin SV in a non-custodial Atomic Wallet, it's the universal wallet that supports both of the coins and other 300+ cryptocurrency assets in one secure interface.</p>
+            <h2>Bitcoin Cash and Bitcoin SV</h2>
+            <p>On 15 November 2018, the Bitcoin Cach (BCH) had a hard fork, the main BCH chain splitted into Bitcoin Cash and Bitcoin SV (Satoshi Vision). Bitcoin SV is a project leaded by Craig Wright’s team with the main idea to increase the block size from 32 to 128 Mb to scalable.</p>
+            <h3>Hard Fork Resuls</h3>
+            <p>After hte hard fork all the holders had two balances. One in BCH and the second in BSV. You can also manage your Bitcoin Cash  and Bitcoin SV in a non-custodial Atomic Wallet, it's the universal wallet that supports both of the coins and other 300+ cryptocurrency assets in one secure interface.</p>
 
-            <h3>How to split Bitcoin Cash forks BCH(ABC) / BSV</h3>
-            <p>When everyone started acknowledging that Bitcoin SV will continue to exist separately of Bitcoin Cash ABC – more and more exchanges began to support it. But because BSV still works unstable, all services that support it warn their users: There is no replay protection between BCH(ABC) and BSV.</p>
-            <p>It means that either of your BCH(ABC) / BSV transactions will be available on both chains simultaneously (double-spend). To prevent that, you need to split BCH(ABC) from BSV before sending money.</p>
-            <p>The easiest way to split these coins is to send one of them to your account on an exchange that supports both forks (Binance, Poloniex, Kraken etc). The second coin will be sent to it automatically. Then you can withdraw the BCH(ABC) and BSV funds to your Atomic Wallet address – once withdrawn, these coins become split and can be used separately.</p>
+            <h3>How to split Bitcoin Cash forks BCH / BSV</h3>
+            <p>To protect yourself from double-spending you need to make your coins splitted.</p>
+            <p>The easiest way to split these coins is to send one of them to your account on an exchange that supports both forks (Poloniex etc). The second coin will be sent to it automatically. Then you can withdraw the Bitcoin Cash and Bitcoin SV funds to your Atomic Wallet address – once withdrawn, these coins become split and can be used separately.</p>
             <ol>
-              <li>Send BCH to Binance</li>
+              <li>Send BCH to exchange</li>
               <li>Both of the coins are sent automatically</li>
-              <li>Receive it on Binance separately</li>
+              <li>Receive it on Exchange separately</li>
               <li>Withdraw it back by each other</li>
               <li>Now it is split in your Atomic Wallet</li>
             </ol>
             <p>These exchanges are using splitter tools to mix each of your transactions with a special one. This measure helps make each transaction unique and prevent networks from simultaneous broadcasting.</p>
-            <p>After that there is only one warning: If someone will send you an unsplit coin, your BCH(ABC) and BSV will stick together again, please be careful.</p>
-            <h3>Where to store Bitcoin Cash ABC / Bitcoin SV</h3>
-            <p>You can store and manage your BCH(ABC), BSV, BTC, ETH, LTC, XRP and other 300+ cryptocurrency assets in a decentralized multi-asset Atomic Wallet. It’s a non-custodial wallet, sinca all private keys are stored in an encrypted manner on the end-user device and never leave it, so your money is totally under your control.</p>
+            <p>After that there is only one warning: If someone will send you an unsplit coin, your BCH and BSV will stick together again, please be careful.</p>
+            <h3>Where to store Bitcoin Cash / Bitcoin SV</h3>
+            <p>You can store and manage your BCH, BSV, BTC, ETH, LTC, XRP and other 300+ cryptocurrency assets in a decentralized multi-asset Atomic Wallet. It’s a non-custodial wallet, sinca all private keys are stored in an encrypted manner on the end-user device and never leave it, so your money is totally under your control.</p>
             <p>We are happy to provide you with the most convenient and versatile solution to hold and manage all of your cryptocurrency assets. Download the latest version of the App and enjoy your assets being safely managed!</p>
                     
 
