--- a/buy-bitcoin-cash.html
+++ b/buy-bitcoin-cash.html
@@ -427,7 +427,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <div class="comments-item comments-item-reviews">
                         <div class="team-author hvr-grow">
                           <a href="https://twitter.com/CharlieShrem/status/1009538446678020104?s=09" rel="nofollow" target="_blank">
-                           <img src="https://pbs.twimg.com/profile_images/865954659084775424/2SRmI8-d_bigger.jpg" class="team-author-avatar" alt>
+                           <img src="https://pbs.twimg.com/profile_images/865954659084775424/2SRmI8-d_bigger.jpg" width="65px" class="team-author-avatar" alt>
                             <div class="team-author-name f-medium">Charlie Shrem</div></a>
                         </div>
                         <div><img src="css/images/trustpilot.png" style="margin-bottom: 15px;" alt="">
