--- a/buy-neo.html
+++ b/buy-neo.html
@@ -426,7 +426,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <div class="swiper-slide">
                     <div class="comments-item comments-item-reviews">
                         <div class="team-author hvr-grow">
-                            <a href="https://twitter.com/cz_binance/status/1119047237076541440" rel="nofollow" target="_blank"> <img src="https://pbs.twimg.com/profile_images/1118864185155149824/rC5M1VzB_bigger.png" width="65px;" class="team-author-avatar" alt></a>
+                            <a href="https://twitter.com/cz_binance/status/1119047237076541440" rel="nofollow" target="_blank"> <img src="https://pbs.twimg.com/profile_images/1148212647319334912/4Tp-7Uac_400x400.png" width="65px;" class="team-author-avatar" alt></a>
                             <div class="team-author-name f-medium">CZ Binance</div>
                         </div>
                         <div><img src="css/images/trustpilot.png" style="margin-bottom: 15px;" alt="">
@@ -440,7 +440,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <div class="comments-item comments-item-reviews">
                         <div class="team-author hvr-grow">
                           <a href="https://twitter.com/CharlieShrem/status/1009538446678020104?s=09" rel="nofollow" target="_blank">
-                           <img src="https://pbs.twimg.com/profile_images/865954659084775424/2SRmI8-d_bigger.jpg" class="team-author-avatar" alt>
+                           <img src="https://pbs.twimg.com/profile_images/865954659084775424/2SRmI8-d_bigger.jpg" width="65px" class="team-author-avatar" alt>
                             <div class="team-author-name f-medium">Charlie Shrem</div></a>
                         </div>
                         <div><img src="css/images/trustpilot.png" style="margin-bottom: 15px;" alt="">
