Modified search script,header logo,btn download

--- a/header/header.html
+++ b/header/header.html
@@ -1,6 +1,6 @@
 <link rel="stylesheet" href="style.css">
 <div class="header">
-        <div class="header__logo">
+        <a href="https://atomicwallet.io" class="header__logo">
                 <svg width="107" height="85" viewBox="0 0 107 85" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <g filter="url(#filter0_d)">
                     <path fill-rule="evenodd" clip-rule="evenodd" d="M24 64.9979L41.3231 17.7341C43.5212 12.2159 47.6192 9.09231 53.0672 9.00201V9C53.1079 9 53.1485 9.00017 53.1891 9.0005C53.2296 9.00017 53.2703 9 53.311 9V9.00201C58.7589 9.09231 62.8569 12.2159 65.0551 17.7341L82.3782 64.9979L71.6511 61.2826L56.853 20.9081C55.9523 18.6749 54.9126 17.8711 53.1891 17.8355C51.4655 17.8711 50.4258 18.6749 49.5251 20.9081L34.7271 61.2826L24 64.9979ZM60.7266 47.0009C60.7266 51.1293 57.3975 54.4761 53.2908 54.4761C49.1841 54.4761 45.8549 51.1293 45.8549 47.0009C45.8549 42.8725 49.1841 39.5258 53.2908 39.5258C57.3975 39.5258 60.7266 42.8725 60.7266 47.0009Z" fill="url(#paint0_linear)"/>
@@ -27,7 +27,7 @@
                     </linearGradient>
                     </defs>
                 </svg>
-            </div>
+            </a>
     
         <nav class="header__navigation">
             <ul>
@@ -47,8 +47,9 @@
     <div class="test"></div>
 
 
-    <script
+    <!--script
     src="https://code.jquery.com/jquery-3.4.1.min.js"
     integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
-    crossorigin="anonymous"></script>
+    crossorigin="anonymous"></script-->
+	<script src="jquery-3.3.1.min.js"></script>
     <script src="scroll.js"></script>
