--- a/ycash-zcash-fork.html
+++ b/ycash-zcash-fork.html
@@ -139,6 +139,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <li>Changing of the address formats to eliminate the ongoing confusion between YCash and ZCash.</li>
               </ul>
               <p>To receive the YCash, just hold your ZCash in Atomic Wallet on July 18.</p>
+              <p>More information can be found on the Ycash <a href="https://www.ycash.xyz/" target="_blank">official website</a>.</p>
 
           
             <div class="item-page-download">
