Added icon-font,some fixed mobile data table

--- a/test/cryptocurrency-prices-test.html
+++ b/test/cryptocurrency-prices-test.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="../css/main.css">
     <link rel="stylesheet" href="../css/media.css">
     <link rel="stylesheet" href="../css/assets-media.css">
+    <link rel="stylesheet" href="../css/atomic_font/atomicwallet.css">
     <link rel="stylesheet" href="css/table_data.css">
     <link rel="stylesheet" href="css/assets-test.css">
    <link rel="stylesheet" href=" https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -136,6 +137,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 		<div class="tokens-filter">TOKENS</div>
 	</div>
 </div>
+
 
 
 <div class="data-table-wrap">
