Mobile header, modified page prices (search part)

--- a/header/header.html
+++ b/header/header.html
@@ -1,5 +1,6 @@
 <link rel="stylesheet" href=" https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="style.css">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <div class="header">
         
         <a href="https://atomicwallet.io" class="header__logo">
@@ -50,7 +51,6 @@
                     <li><a href="#">Assets</a></li>
                     <li><a href="#">Token</a></li>
                     <li><a href="#">Support</a></li>
-                    <li><a href="#">Download</a></li>
                 </ul>
             </nav>
         
