Mobile for prices

--- a/test/cryptocurrency-prices-test.html
+++ b/test/cryptocurrency-prices-test.html
@@ -120,9 +120,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 
 <main class="main">
-    <div class="container relative">
+    <div class=" relative">
         <h1 class="main-title f-bold">Atomic Wallet Cryptocurrencies List</h1>
-        <div class="container search-container">
+        <div class="search-container">
             <div class="search-block"> 
                 <div class="input-wrapper"><input type="text" placeholder="Search" id="search"><i class="fa fa-search"></i></div>
             </div>
