--- a/listing-campaign.html
+++ b/listing-campaign.html
@@ -46,8 +46,8 @@
     <link rel="apple-touch-icon" sizes="180x180" href="../apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="../favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="../favicon-16x16.png">
-    <link rel="manifest" href="../site.webmanifest">
-    <link rel="mask-icon" href="../safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="manifest" href="/site.webmanifest">
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
 
@@ -83,10 +83,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 </div>
 <div class="header container">
 <div class="container relative">
-    <img src="../css/images/bg-first-screen.svg" alt class="bg bg-main">
+    <img src="css/images/bg-first-screen.svg" alt class="bg bg-main">
     <header class="header">
         <a href="https://atomicwallet.io" class="header-logo">
-            <img src="../css/images/logo.svg" alt="Atomic" class="img-logo">
+            <img src="css/images/logo.svg" alt="Atomic" class="img-logo">
         </a>
         <nav class="header-menu f-light">
             <a href="/" class="hvr-grow">Wallet</a>
@@ -99,22 +99,22 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <nav class="header-menu-icons  f-light">
 
             <a href="https://twitter.com/atomicwallet" target="_blank" class="hvr-float" rel="nofollow">
-                <img src="../css/images/top_twitter.svg">
+                <img src="css/images/top_twitter.svg">
             </a>
             <a href="https://t.me/atomicwalletchat" target="_blank" class="hvr-float" rel="nofollow">
-                <img src="../css/images/top_telegram.svg">
+                <img src="css/images/top_telegram.svg">
             </a>
             <a href="https://medium.com/atomic-wallet" target="_blank" class="hvr-float" rel="nofollow">
-                    <img src="../css/images/top_medium.svg">
+                    <img src="css/images/top_medium.svg">
                 </a>
             <a href="https://www.facebook.com/atomicwallet" target="_blank" class="hvr-float" rel="nofollow">
-                    <img src="../css/images/top_facebook.svg">
+                    <img src="css/images/top_facebook.svg">
                 </a>
             <a href="https://www.reddit.com/r/atomicwallet/" target="_blank" class="hvr-float" rel="nofollow">
-                <img src="../css/images/top_reddit.svg">
+                <img src="css/images/top_reddit.svg">
             </a>
             <a href="https://www.youtube.com/channel/UCLMnUt6BBtA67eic1vRGF3g" target="_blank" class="hvr-float" rel="nofollow">
-                <img src="../css/images/top_youtube.svg">
+                <img src="css/images/top_youtube.svg">
             </a>
         </nav>
         <button class="header-button only-mobile" id="menu-button-open"></button>
